--- a/03Hooks/src/UseRef/Useref.css
+++ b/03Hooks/src/UseRef/Useref.css
@@ -21,3 +21,8 @@ button{
     border-radius: 5px;
     background-color: #671267;
 }
+
+.main input::placeholder{
+    font-weight: 800;
+    font-size: 12px;
+}
