--- a/13Portfolio/src/components/Navbar/Navbar.css
+++ b/13Portfolio/src/components/Navbar/Navbar.css
@@ -19,6 +19,23 @@
     flex-direction: column;
     gap: 5px;
 }
+
+/* .nav-menu::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: #B923E1;
+    transform: scaleX(0);
+    transition: transform 0.3s;
+}
+
+.nav-menu:hover::after{
+    transform: scaleX(1);
+} */
+
 .nav-menu li img{
     display: flex;
     margin: auto;
@@ -40,4 +57,56 @@
 .anchor-link{
     text-decoration: none;
     color: white;
+}
+
+.nav-mob-close{
+    display: none;
+}
+.nav-mob-open{
+    display: none;
+}
+
+@media(max-width:768px){
+    .navbar{
+        margin: 20px 50px;
+    }
+
+    .nav-connect{
+        display: none;
+    }
+
+    .nav-mob-open{
+        display: block;
+        position: fixed;
+        right: 30px;
+    }
+
+    .nav-mob-close{
+        display: block;
+        position: relative;
+        top: 30px;
+        left: 290px;
+        width: 30px;
+    }
+
+    .nav-menu{
+        position: fixed;
+        flex-direction: column;
+        align-items: start;
+        top: 0;
+        gap: 30px;
+        background: #1F0016;
+        width: 350px;
+        height: 100%;
+        z-index: 2;
+        transition: right 0.5s;
+        right: -350px;
+    }
+    
+    .nav-menu li{
+        font-size: 30px;
+        padding-left: 100px;
+        flex-direction: row;
+        gap: 20px;
+    }
 }
