--- a/13Portfolio/src/components/Footer/Footer.css
+++ b/13Portfolio/src/components/Footer/Footer.css
@@ -75,13 +75,27 @@
         margin: 50px 50px;
     }
 
+    /* .footer-top-left{
+        min-width: 100%;
+        border: 1px solid white;
+    } */
+
+    .footer-top-left p{
+        min-width: 90%;
+        font-size: 24px;
+        text-align: justify;
+    }
+
     .footer-top{
         flex-direction: column;
         gap: 50px;
     }
 
     .footer-top-right{
-        gap: 20px;
+        /* min-width: 90%; */
+        /* border: 1px solid white; */
+        gap: 90px;
+        /* justify-content: space-between; */
     }
 
     .footer hr{
@@ -98,7 +112,7 @@
     }
 
     .footer-subscribe{
-        font-size: 20px;
+        font-size: 22px;
         padding: 22px 48px;
         border-radius: 50px;
         background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 100%);
