--- a/13Portfolio/src/components/Header/Hero.css
+++ b/13Portfolio/src/components/Header/Hero.css
@@ -1,8 +1,9 @@
 .hero{
+    width: auto;
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 35px;
+    gap: 70px;
 }
 
 .hero img{
@@ -135,7 +136,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
     border-radius: 50px;
     border: 2px solid white;
 }
@@ -162,19 +162,24 @@
     .hero{
         width: 200%; 
         height: 1180px;
-        margin: 50px 20px;
+        margin: 75px 20px;
         gap: 60px;
     }
     .hero h1{
         width: 90%;
-        font-size: 45px;
+        font-size: 50px;
     }
 
     .hero p{
-        width: 80%;
-        font-size: 18px;
+        width: 100%;
+        /* border: 2px solid white; */
+        text-align:center;
+        font-size: 28px;
         line-height: 30px;
-        margin: 10px 0px;
+        margin: 20px 20px;
+        padding: 0 20px;
+        /* letter-spacing: 0.9px; */
+        word-spacing: 1.6px;
     }
     .hero h2{
         font-size: 50px;
@@ -182,18 +187,20 @@
 
     .hero-action{
         gap: 16px;
-        font-size: 18px;
+        font-size: 28px;
         font-weight: 500;
-        margin-bottom: 40px;
+        margin-top: 30px;
+        /* border: 2px solid white; */
+        
     }
 
     .hero-connect{
         padding: 20px 30px;
-        border-radius: 40px;
+        border-radius: 50px;
     }
     .hero-resume{
-        padding: 20px 50px;
-        border-radius: 40px;
+        padding: 20px 30px;
+        border-radius: 50px;  
     }
 
     .image-container{
@@ -201,10 +208,12 @@
         width: 350px;
         height: 350px;
     }
+
     .profile-picture{
         width: 350px;
         height: 350px;
     }
+
     .profile-picture img{
         height: 120%;
         width: 120%;
@@ -212,5 +221,26 @@
         margin-left: 20px;
         border-radius: 50%;
         transition: 0.5s;
+    }
+    .hero-socials{
+        /* border: 2px solid white; */
+    }
+    
+    .github{
+        height: 80px;
+        width: 80px;
+    }
+
+    .linkedin{
+        height: 80px;
+        width: 80px;
+    }
+
+    .linkedin .icon{
+        font-size: 50px;
+    }
+
+    .github .icon{
+        font-size: 50px;
     }
 }
