--- a/13Portfolio/src/components/Navbar/Navbar.css
+++ b/13Portfolio/src/components/Navbar/Navbar.css
@@ -3,6 +3,9 @@
     align-items: center;
     justify-content: space-between;
     margin: 20px 170px;
+    position: sticky;
+    top: 0;
+    background: #161513;
 }
 
 .nav-menu{
@@ -11,6 +14,7 @@
     font-size: 20px;
     align-items: center;
     list-style: none;
+
 }
 
 .nav-menu li{
