--- a/13Portfolio/src/components/Skills/skill.css
+++ b/13Portfolio/src/components/Skills/skill.css
@@ -15,6 +15,7 @@
   padding: 0px 30px;
   font-size: 75px;
   font-weight: 600;
+  
 }
 
 .skill-title img {
@@ -80,11 +81,13 @@
 
 .node-skill:hover {
   color: green;
+  border: 2px solid rgb(2, 119, 80);
   background-image: linear-gradient(-20deg, #0ba360 0%, #3cba92 100%);
 }
 
 .mongo-skill:hover {
   color: darkgreen;
+  border: 2px solid rgb(7, 105, 23);
   background-image: linear-gradient(-60deg, #16a085 0%, #41eb0d 100%);
 }
 
@@ -95,6 +98,7 @@
 
 .rn-skill:hover {
   color: darkblue;
+  border: 2px solid blue;
   background-image: linear-gradient(-60deg, #4481eb 0%, #1318a5 100%);
 }
 
@@ -105,7 +109,9 @@
     #5d9fff 0%,
     #b8dcff 48%,
     #6bbbff 100%
+    
   );
+  border: 2px solid rgb(2, 71, 120);
 }
 
 @media(max-width:768px){
@@ -114,11 +120,17 @@
         align-items: start;
         gap: 70px;
         margin: 20px 50px;
+        
+    }
+
+    .skill-title{
+      margin: auto;
     }
 
     .skill-title h1{
         padding: 0;
         font-size: 60px;
+        text-align: center;
     }
 
     .skill-title img{
