--- a/SerachFilter/src/components/Navbar.css
+++ b/SerachFilter/src/components/Navbar.css
@@ -17,6 +17,7 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  /* border: 1px solid; */
 }
 
 .logo img {
@@ -31,6 +32,7 @@
   flex: 1;
   max-width: 500px;
   margin: 0 20px;
+  /* border: 1px solid; */
 }
 
 .search-bar input {
